syntax = "proto3";

option go_package = "github.com/iotaledger/goshimmer/packages/warpsync/warpsyncproto";

package warpsyncproto;

message Packet {
  oneof body {
    EpochBlocks epochBlocks = 1;
    EpochBlocksRequest epochBlocksRequest = 2;
    EpochCommittment epochCommitment = 3;
    EpochCommittmentRequest epochCommitmentRequest = 4;
    Negotiation negotiation = 5;
  }
}

message EpochBlocks {
  int64 EI = 1;
  bytes EC = 2;
  repeated bytes blocks = 3;
}

message EpochBlocksEnd {
  int64 EI = 1;
  bytes EC = 2;
  bytes merkleProof = 3;
}

message EpochBlocksRequest {
  int64 EI = 1;
  bytes EC = 2;
}

message EpochCommittment {
  int64 EI = 1;
  bytes prevEC = 2;
  bytes ECR = 3;
}

message EpochCommittmentRequest {
  int64 EI = 1;
  bytes EC = 2;
}

message Negotiation {}